--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build ZMK firmware
+
 on:
   workflow_dispatch:
   push:
@@ -8,3 +9,10 @@ on:
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+
+  draw:
+    needs: build
+    if: ${{ needs.build.result == 'success' }}
+    uses: ./.github/workflows/draw-reusable.yml
+    with:
+      commit_message: ${{ github.event.head_commit.message }}
