--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,7 @@ jobs:
     needs: build
     if: ${{ needs.build.result == 'success' }}
     uses: ./.github/workflows/draw-reusable.yml
+    permissions:
+      contents: write
     with:
       commit_message: ${{ github.event.head_commit.message }}
