--- a/.github/workflows/_draw.yml
+++ b/.github/workflows/_draw.yml
@@ -17,12 +17,10 @@ on:
 
 jobs:
   draw:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call keymap-drawer reusable workflow
-        uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
-        with:
-          commit_message: ${{ inputs.commit_message }}
-          destination: ${{ inputs.destination }}
-          fail_on_error: ${{ inputs.fail_on_error }}
+    name: Call keymap-drawer reusable workflow
+    uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
+    with:
+      commit_message: ${{ inputs.commit_message }}
+      destination: ${{ inputs.destination }}
+      fail_on_error: ${{ inputs.fail_on_error }}
         
