--- a/boards/arm/eyelash_corne/eyelash_corne.dtsi
+++ b/boards/arm/eyelash_corne/eyelash_corne.dtsi
@@ -10,8 +10,7 @@
 #include <dt-bindings/led/led.h>
 #include <dt-bindings/zmk/matrix_transform.h>
 
-// Commented out for compatibility with older ZMK forks without physical_layouts.dtsi
-// #include "eyelash_corne-layouts.dtsi"
+#include "eyelash_corne-layouts.dtsi"
 
 / {
     model = "eyelash_corne";
@@ -24,8 +23,7 @@
         zmk,kscan = &kscan0;
         zmk,battery = &vbatt;
         zmk,underglow = &led_strip;
-        // Commented out for compatibility with older ZMK forks
-        // zmk,physical-layout = &default_layout;
+        zmk,physical-layout = &default_layout;
         zmk,backlight = &backlight;
     };
 
